--- a/src/pages/Home/home.html
+++ b/src/pages/Home/home.html
@@ -19,8 +19,15 @@
                     <div class="slider-track" id="sliderTrack">
                         <div class="slide-banner text-slide">
                             <h1>HOW TO PLAY</h1>
-                            <p>Chọn các số nguyên tố chính xác để ghi điểm.</p>
-                            <p>Định ngĩa số nguyên tố: Là số chỉ chia hết cho 1 và chính nó.</p>
+                             <p>Khi trò chơi bắt đầu, các con số sẽ xuất hiện.</p>
+                             <p>Hãy chọn đúng <strong>số nguyên tố</strong> để ghi điểm.</p>
+                             <p>Chọn sai sẽ bị trừ điểm — hãy cẩn thận!</p>
+                        </div>
+
+                         <div class="slide-banner text-slide">
+                            <h1>SUGGEST</h1>
+                             <p>Số nguyên tố là số chỉ chia hết cho 1 và chính nó.</p>
+                             <p>Ví dụ: 2, 3, 5, 7, 11 là số nguyên tố.</p>
                         </div>
 
                         <div class="slide-banner text-slide">
