--- a/src/pages/Home/home.html
+++ b/src/pages/Home/home.html
@@ -45,7 +45,8 @@
                 </div>
 
                 <div class="button-group">
-                   
+                    <button onclick="startGame()">Bắt đầu chơi</button>
+                    <button onclick="viewRanking()">Xem bảng xếp hạng</button>
                 </div>
             </div>
         </div>
