chuyển index ra

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trang Chủ Trò Chơi</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="src/pages/Home/home.css" />
 </head>
 
 <body>
@@ -53,7 +53,7 @@
     </body>
 
 
-    <script src="./home.js"></script>
+    <script src="src/pages/Home/home.js"></script>
 </body>
 
 </html>
