--- a/src/pages/Ranking/ranking.html
+++ b/src/pages/Ranking/ranking.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="button-group">
-        <button onclick="window.location.href='/src/pages/Home/home.html'">Quay lại</button>
+        <button onclick="window.location.href='/PrimeNumberGame/index.html'">Quay lại</button>
       </div>
     </div>
   </div>
