chỉnh nội dung button

--- a/src/pages/PlayHistory/playHistory.html
+++ b/src/pages/PlayHistory/playHistory.html
@@ -28,7 +28,7 @@
         </table>
         <div class="button-group">
             <button onclick="window.location.href='/src/pages/Home/home.html'">Quay lại</button>
-            <button onclick="clearLeaderboard()">Xóa bảng xếp hạng</button>
+            <button onclick="clearLeaderboard()">Xóa lịch sử xếp hạng</button>
         </div>
     </div>
 
