--- a/src/pages/Login/login.html
+++ b/src/pages/Login/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hãy nhập tên để bắt đầu</title>
-  <link rel="stylesheet" href="/src/interface/interface.css">
+  <link rel="stylesheet" href=../../interface/interface.css">
 </head>
 
 <body>
