--- a/src/pages/PlayHistory/playHistory.html
+++ b/src/pages/PlayHistory/playHistory.html
@@ -27,7 +27,7 @@
             </tbody>
         </table>
         <div class="button-group">
-            <button onclick="window.location.href='/src/pages/Home/home.html'">Quay lại</button>
+            <button onclick="window.location.href='../../pages/Home/home.html'">Quay lại</button>
             <button onclick="clearLeaderboard()">Xóa lịch sử xếp hạng</button>
         </div>
     </div>
