--- a/src/pages/Ranking/ranking.html
+++ b/src/pages/Ranking/ranking.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bảng Xếp Hạng</title>
-  <link rel="stylesheet" href="/src/interface/interface.css" />
+  <link rel="stylesheet" href="../../interface/interface.css" />
   <link rel="stylesheet" href="./ranking.css" />
 </head>
 
@@ -78,7 +78,7 @@
       </div>
 
       <div class="button-group">
-        <button onclick="window.location.href='/src/pages/Home/home.html'">Quay lại</button>
+        <button onclick="window.location.href='../../pages/Home/home.html'">Quay lại</button>
       </div>
     </div>
   </div>
